# django-fobi

./: .coveragerc  .env  .flake8  .gitignore  .gitmodules  .hgignore  .pylintrc  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CREDITS.rst  Docker  Dockerfile  LICENSES.rst  LICENSE_GPL2.0.txt  LICENSE_LGPL_2.1.txt  MANIFEST.in  Makefile  QUICK_START.rst  README.rst  ROADMAP.rst  SCREENSHOTS.rst  TODOS.rst  USER_MANUAL.rst  build_docs.sh  clean_up.sh  docker-compose.yml  get_chromedriver.py  install3.sh  install_captcha.sh  install_django17.sh  install_djangocms.sh  install_djangocms_2.sh  install_feincms.sh  install_mezzanine.sh  install_pypi.sh  install_recaptcha.sh  install_verbose.sh  make_messages.sh  make_pypi_long_description.sh  (+19 more)
.circleci/: config.yml
docs/: Makefile  changelog.rst  conf.distrib  conf.py  documentation.rst.distrib  fobi.contrib.apps.djangocms_integration.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_image.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_image_url.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_markdown.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_richtext.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_text.rst  fobi.contrib.apps.drf_integration.form_elements.content.content_video.rst  fobi.contrib.apps.drf_integration.form_elements.content.rst  fobi.contrib.apps.drf_integration.form_elements.fields.boolean.rst  fobi.contrib.apps.drf_integration.form_elements.fields.checkbox_select_multiple.rst  fobi.contrib.apps.drf_integration.form_elements.fields.date.rst  (+154 more)
examples/: README.rst  (+18 more)
(+1708 files in other folders)
