[bdist_wheel]
universal = 1

[wheel]
universal = 1

[coverage:run]
branch = True
source = ./src/fobi/

[coverage:report]
fail_under = 95
show_missing = True

[flake8]
exclude =
    build,
    dist,
    docs,
    .git,
    .tox,
    ./src/fobi/migrations/*.py
    ./src/fobi/south_migrations/*.py
ignore =
max-line-length = 80

[isort]
atomic = true
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = fobi
include_trailing_comma = true
known_first_party = fobi
known_third_party =
    django
    factory
multi_line_output = 5
skip =
    docs,
    fabfile.py
    setup.py,
    wsgi.py,
    ./src/fobi/migrations/*.py,
    ./src/fobi/south_migrations/*.py

[metadata]
license-file = LICENSE_GPL2.0.txt
